[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/hud/drawers/inventory_drawer/InventoryHandle.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/drawers/inventory_drawer/InventoryDrawer.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/drawers/drawer_background_wide_thick.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/drawers/EndTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/hud/drawers/DrawerInsert.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/hud/drawers/DrawerCorner.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/hud/drawers/StartShade.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/hud/drawers/InsertTile.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/hud/drawers/DrawerSounds.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/hud/drawers/inventory_drawer/Inventory.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/hud/drawers/drawer_handle_hover.png" type="Texture" id=11]
[ext_resource path="res://ui/hud/drawers/drawer_handle_default.png" type="Texture" id=12]
[ext_resource path="res://ui/hud/drawers/drawer_interior_shade.png" type="Texture" id=13]
[ext_resource path="res://ui/hud/drawers/drawer_background_wide_thin.png" type="Texture" id=14]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 239, 11 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.5
bounce = 0.2

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49, 5 )

[node name="InventoryDrawer" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="DrawerLimit" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawerLimit"]
visible = false
position = Vector2( 238, 237 )
shape = SubResource( 1 )

[node name="InteriorTile" type="Sprite" parent="."]
position = Vector2( 57, 266 )
scale = Vector2( 1, 356.603 )
texture = ExtResource( 3 )
centered = false

[node name="InteriorTile2" type="Sprite" parent="."]
position = Vector2( 57, 239 )
scale = Vector2( 1, 34.6127 )
texture = ExtResource( 14 )
centered = false

[node name="Insert1" parent="." instance=ExtResource( 5 )]
position = Vector2( 56, 257 )
rotation = 0.0

[node name="Insert2" parent="." instance=ExtResource( 5 )]
position = Vector2( 424, 257 )
rotation = 0.0
scale = Vector2( -1, 1 )

[node name="Insert3" parent="." instance=ExtResource( 5 )]
position = Vector2( 424, 367 )
rotation = 0.0
scale = Vector2( -1, 1 )
animation = "thick"

[node name="Insert4" parent="." instance=ExtResource( 5 )]
position = Vector2( 56, 367 )
rotation = 0.0
animation = "thick"

[node name="StartShade" parent="." instance=ExtResource( 7 )]
position = Vector2( 421, 324 )

[node name="StartShade2" parent="." instance=ExtResource( 7 )]
position = Vector2( 59, 323 )
rotation = 3.14159

[node name="InsertTile" parent="." instance=ExtResource( 8 )]
position = Vector2( 68, 257 )
rotation = 0.0
scale = Vector2( 172.029, 1 )
animation = "thin"

[node name="InsertTile2" parent="." instance=ExtResource( 8 )]
position = Vector2( 68, 367 )
rotation = 0.0
scale = Vector2( 172.03, 1 )

[node name="InteriorShade" type="Sprite" parent="."]
position = Vector2( 240, 263 )
scale = Vector2( 178.095, 1 )
texture = ExtResource( 13 )

[node name="Corner1" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 220 )
rotation = 0.0

[node name="Corner2" parent="." instance=ExtResource( 6 )]
position = Vector2( 424, 220 )
rotation = -3.14159
scale = Vector2( 1, -1 )

[node name="EndTile" parent="." instance=ExtResource( 4 )]
position = Vector2( 64, 220 )
rotation = 0.0
scale = Vector2( 176.189, 1 )

[node name="InventoryHandle" type="RigidBody2D" parent="."]
position = Vector2( -1, 215 )
input_pickable = true
collision_layer = 8
collision_mask = 8
mode = 2
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HandleSprite" type="TextureButton" parent="InventoryHandle"]
margin_left = 190.0
margin_right = 291.0
margin_bottom = 18.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryHandle"]
visible = false
position = Vector2( 240, 6 )
shape = SubResource( 3 )

[node name="DrawerSounds" parent="InventoryHandle" instance=ExtResource( 9 )]

[node name="Inventory" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -60 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Start" type="Position2D" parent="."]
position = Vector2( 0, 215 )
__meta__ = {
"_edit_lock_": true
}

[node name="End" type="Position2D" parent="."]
position = Vector2( 0, 35 )
rotation = 1.57079
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="InventoryHandle" to="InventoryHandle" method="_on_InventoryHandle_body_entered"]
[connection signal="button_down" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_button_down"]
[connection signal="button_up" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_button_up"]
[connection signal="mouse_entered" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_mouse_entered"]
[connection signal="mouse_exited" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_mouse_exited"]
